--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio Miqueias Meireles</title>
+    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
 </head>
 <body>
-    
+    <head></head>
+    <main>
+        <section id="introdução">
+            <img style="width: 150px;" src="imagens/guanabara-perfil.jpg" alt="Minha foto">
+            <h1>Miquéias Meireles</h1>
+            <p>Atualmente Trabalhando no Hospital Geral Dr. Beda como aprendiz de T.I. Pratico e desenvolvo projetos nas horas vagas pois é uma área pela qual me despertou muito interesse! Poder criar, estilizar e até deixar tudo mais dinâmico com centerteza é algo que te dá a sensação de recompensa após os neurônios queimados ao programa-lás 😂</p>
+        </section>
+        <section id="apresentação"></section>
+        <section id="skills"></section>
+        <section id="formação"></section>
+        <section id="projetos"></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
