--- a/index.html
+++ b/index.html
@@ -5,18 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio Miqueias Meireles</title>
     <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <head></head>
+    <header><i class='fas fa-home'></i> <i class='fas fa-brain'></i> <i class='fas fa-graduation-cap'></i> <i class='fas fa-moon'> </i></header>
     <main>
         <section id="introdução">
             <img style="width: 150px;" src="imagens/guanabara-perfil.jpg" alt="Minha foto">
             <h1>Miquéias Meireles</h1>
             <p>Atualmente Trabalhando no Hospital Geral Dr. Beda como aprendiz de T.I. Pratico e desenvolvo projetos nas horas vagas pois é uma área pela qual me despertou muito interesse! Poder criar, estilizar e até deixar tudo mais dinâmico com centerteza é algo que te dá a sensação de recompensa após os neurônios queimados ao programa-lás 😂</p>
+            <i class='fab fa-linkedin-in'></i>
+            <i class='fab fa-github-square'></i>
+            <i class='fab fa-youtube'></i>
+            <i class='fab fa-instagram'></i>
+            <i class='fas fa-tv'></i>
         </section>
-        <section id="apresentação"></section>
-        <section id="skills"></section>
-        <section id="formação"></section>
+        <section id="apresentação">
+            <h1><i class='far fa-comments'></i> Apresentação</h1>
+            <iframe width="290" height="200" src="https://www.youtube.com/embed/tNobiwuAaAg?si=bQOf4oQ7xSXGlArF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
+        <section id="skills">
+            <h1><i class='fas fa-brain'></i> Minhas skills</h1>
+            <h2><i class='fas fa-code'></i> Python</h2>
+            <h2><i class='fas fa-code'></i> HTML5</h2>
+            <h2><i class='fas fa-code'></i> CSS3</h2>
+            <h2><i class='fas fa-code'></i> JavaScript</h2>
+            <h2><i class='fas fa-users'></i> Comunicação</h2>
+            <h2><i class='fas fa-users'></i> Trabalho em equipe</h2>
+            <h2><i class='fas fa-users'></i> Adaptabilidade</h2>
+            <h2><i class='fas fa-users'></i> Liderença</h2>
+        </section>
+        <section id="formação">
+            <i class='fas fa-graduation-cap'></i>
+        </section>
         <section id="projetos"></section>
     </main>
     <footer></footer>
