--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio Miqueias Meireles</title>
+    <link rel="stylesheet" href="estilos/style.css">
     <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -35,11 +36,39 @@
             <h2><i class='fas fa-users'></i> Adaptabilidade</h2>
             <h2><i class='fas fa-users'></i> Liderença</h2>
         </section>
-        <section id="formação">
-            <i class='fas fa-graduation-cap'></i>
+        <section id="formação"><i class='fas fa-graduation-cap'></i> Formação
+            <p>2023 - Dias atuias</p>
+            <h2>Técnico em informática</h2>
+            <p>Aprendizado em T.I</p>
+            <p>2023 - Dias atuias</p>
+            <h2>Desenvolvimento web/apps/games</h2>
+            <p>Aprendizado Diversas linguagens de programação e engines</p>
         </section>
-        <section id="projetos"></section>
+        <section id="projetos"><i class='fas fa-pencil-ruler'></i> Projetos
+            <p>2025</p>
+            <h2>Projeto Login</h2>
+            <p>Projeto construído para treinar responsividade e formulários em uma das telas mais populares em sistemas.</p>
+             <a href="#" target="_blank">Saiba mais...</a> <!-- Não é isso, precisa relembrar!!! -->
+            <p>2025</p>
+            <h2>Projeto Redes Sociais</h2>
+            <p>Projeto construído para treinar responsividade e múltiplos media queries e divulgar as suas principais redes socias.</p>
+            <a href="#" target="_blank">Saiba mais...</a>
+            <p>2025</p>
+            <h2>Projeto Android</h2>
+            <p>Projeto construído para treinar conteúdos e imagens dinâmicas com a História do sistema Android.</p>
+            <a href="#" target="_blank">Saiba mais</a>
+            <p>2025</p>
+            <h2>Projeto Cordel</h2>
+            <p>Projeto construído para treinar efeito parallax em imagens e a apresentação de conteúdo em diversos tamanhos de tela.</p>
+            <a href="#" target="_blank"></a>
+            <p>2025</p>
+            <h2>Projeto de Vídeos</h2>
+            <p>Projeto construído para treinar a inserção de vídeos em nosso site, além da navegação entre páginas..</p>
+            <a href="#" target="_blank">Saiba mais...</a>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <p>Portifólio desenvolvido por <strong>Miquéias Meireles</strong> em 2025</p>
+    </footer>
 </body>
 </html>
