--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </section>
     </main>
     <footer>
-        <p>Portifólio desenvolvido por <strong>Miquéias Meireles</strong> em 2025</p>
+        <p>Portifólio desenvolvido por <strong>Miquéias Meireles</strong> em 2025!</p>
     </footer>
 </body>
 </html>
