--- a/index.html
+++ b/index.html
@@ -48,23 +48,38 @@
             <p>2025</p>
             <h2>Projeto Login</h2>
             <p>Projeto construído para treinar responsividade e formulários em uma das telas mais populares em sistemas.</p>
-             <a href="#" target="_blank">Saiba mais...</a> <!-- Não é isso, precisa relembrar!!! -->
+            <details>
+                <summary style="cursor: pointer; color: blue;">Saiba mais...</summary>
+                <p style="margin-top: 10px;">Este projeto foi desenvolvido em HTML e CSS. Ele mostra uma página de login, onde possui responsividade adaptativa</p>
+            </details>
             <p>2025</p>
             <h2>Projeto Redes Sociais</h2>
             <p>Projeto construído para treinar responsividade e múltiplos media queries e divulgar as suas principais redes socias.</p>
-            <a href="#" target="_blank">Saiba mais...</a>
+            <details>
+                <summary style="cursor: pointer; color: blue;">Saiba mais...</summary>
+                <p style="margin-top: 10px;">Este projeto foi desenvolvido com HTML, CSS e JavaScript. Ele inclui ícones interativos das redes sociais, layout adaptável para diferentes tamanhos de tela e animações suaves para melhorar a experiência do usuário.</p>
+            </details>
             <p>2025</p>
             <h2>Projeto Android</h2>
             <p>Projeto construído para treinar conteúdos e imagens dinâmicas com a História do sistema Android.</p>
-            <a href="#" target="_blank">Saiba mais</a>
+            <details>
+                <summary style="cursor: pointer; color: blue;">Saiba mais...</summary>
+                <p style="margin-top: 10px;">Este projeto foi o meu primeiro site desenvolvido, nele aprendi a introdução ao HTML e CSS de uma forma bem completa</p>
+            </details>
             <p>2025</p>
             <h2>Projeto Cordel</h2>
             <p>Projeto construído para treinar efeito parallax em imagens e a apresentação de conteúdo em diversos tamanhos de tela.</p>
-            <a href="#" target="_blank"></a>
+            <details>
+                <summary style="cursor: pointer; color: blue;">Saiba mais...</summary>
+                <p style="margin-top: 10px;">Este projeto foi desenvolvido com foco maior no foco do aprendizado em CSS</p>
+            </details>
             <p>2025</p>
             <h2>Projeto de Vídeos</h2>
             <p>Projeto construído para treinar a inserção de vídeos em nosso site, além da navegação entre páginas..</p>
-            <a href="#" target="_blank">Saiba mais...</a>
+            <details>
+                <summary style="cursor: pointer; color: blue;">Saiba mais...</summary>
+                <p>Este projeto foi desenvolvido com HTMl e CSS com utilização de iframes com limks pelo youtube</p>
+            </details>
         </section>
     </main>
     <footer>
