--- a/index.html
+++ b/index.html
@@ -9,21 +9,35 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <header><i class='fas fa-home'></i> <i class='fas fa-brain'></i> <i class='fas fa-graduation-cap'></i> <i class='fas fa-moon'> </i></header>
+    <header>
+        <nav>
+            <ul>
+                <li><a><i class='fas fa-home'></i></a></li>
+
+                <li><a><i class='fas fa-brain'></i></a></li>
+
+                <li><a><i class='fas fa-graduation-cap'></i></a></li>
+
+                <li><a><i class='fas fa-pencil-ruler'></i></a></li>
+
+                <li><a><i class='fas fa-moon'></i></a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
-        <section id="introdução">
+        <section id="introducao">
             <img style="width: 150px;" src="imagens/guanabara-perfil.jpg" alt="Minha foto">
             <h1>Miquéias Meireles</h1>
             <p>Atualmente Trabalhando no Hospital Geral Dr. Beda como aprendiz de T.I. Pratico e desenvolvo projetos nas horas vagas pois é uma área pela qual me despertou muito interesse! Poder criar, estilizar e até deixar tudo mais dinâmico com centerteza é algo que te dá a sensação de recompensa após os neurônios queimados ao programa-lás 😂</p>
-            <i class='fab fa-linkedin-in'></i>
-            <i class='fab fa-github-square'></i>
-            <i class='fab fa-youtube'></i>
-            <i class='fab fa-instagram'></i>
-            <i class='fas fa-tv'></i>
+            <button><i class='fab fa-linkedin-in'></i></button>
+            <button><i class='fab fa-github-square'></i><button>
+            <button><i class='fab fa-youtube'></i><button>
+            <button><i class='fab fa-instagram'></i><button>
+            <button><i class='fas fa-tv'></i><button>
         </section>
-        <section id="apresentação">
+        <section id="apresentacao">
             <h1><i class='far fa-comments'></i> Apresentação</h1>
-            <iframe width="290" height="200" src="https://www.youtube.com/embed/tNobiwuAaAg?si=bQOf4oQ7xSXGlArF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="390" height="300" src="https://www.youtube.com/embed/6PkfO7jrCLk?si=YyFregKFrZEfepO1&amp;start=229" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
         <section id="skills">
             <h1><i class='fas fa-brain'></i> Minhas skills</h1>
@@ -36,48 +50,50 @@
             <h2><i class='fas fa-users'></i> Adaptabilidade</h2>
             <h2><i class='fas fa-users'></i> Liderença</h2>
         </section>
-        <section id="formação"><i class='fas fa-graduation-cap'></i> Formação
-            <p>2023 - Dias atuias</p>
+        <section id="formacao">
+            <h1><i class='fas fa-graduation-cap'></i> Formação</h1>
+            <p><strong>2023 - Dias atuias</strong></p>
             <h2>Técnico em informática</h2>
             <p>Aprendizado em T.I</p>
-            <p>2023 - Dias atuias</p>
+            <p><strong>2023 - Dias atuias</strong></p>
             <h2>Desenvolvimento web/apps/games</h2>
             <p>Aprendizado Diversas linguagens de programação e engines</p>
         </section>
-        <section id="projetos"><i class='fas fa-pencil-ruler'></i> Projetos
+        <section id="projetos">
+            <h1><i class='fas fa-pencil-ruler'></i> Projetos</h1>
             <p>2025</p>
             <h2>Projeto Login</h2>
             <p>Projeto construído para treinar responsividade e formulários em uma das telas mais populares em sistemas.</p>
             <details>
-                <summary style="cursor: pointer; color: blue;">Saiba mais...</summary>
-                <p style="margin-top: 10px;">Este projeto foi desenvolvido em HTML e CSS. Ele mostra uma página de login, onde possui responsividade adaptativa</p>
+                <summary>Saiba mais...</summary>
+                <p>Este projeto foi desenvolvido em HTML e CSS. Ele mostra uma página de login, onde possui responsividade adaptativa</p>
             </details>
             <p>2025</p>
             <h2>Projeto Redes Sociais</h2>
             <p>Projeto construído para treinar responsividade e múltiplos media queries e divulgar as suas principais redes socias.</p>
             <details>
-                <summary style="cursor: pointer; color: blue;">Saiba mais...</summary>
-                <p style="margin-top: 10px;">Este projeto foi desenvolvido com HTML, CSS e JavaScript. Ele inclui ícones interativos das redes sociais, layout adaptável para diferentes tamanhos de tela e animações suaves para melhorar a experiência do usuário.</p>
+                <summary>Saiba mais...</summary>
+                <p>Este projeto foi desenvolvido com HTML, CSS e JavaScript. Ele inclui ícones interativos das redes sociais, layout adaptável para diferentes tamanhos de tela e animações suaves para melhorar a experiência do usuário.</p>
             </details>
             <p>2025</p>
             <h2>Projeto Android</h2>
             <p>Projeto construído para treinar conteúdos e imagens dinâmicas com a História do sistema Android.</p>
             <details>
-                <summary style="cursor: pointer; color: blue;">Saiba mais...</summary>
-                <p style="margin-top: 10px;">Este projeto foi o meu primeiro site desenvolvido, nele aprendi a introdução ao HTML e CSS de uma forma bem completa</p>
+                <summary>Saiba mais...</summary>
+                <p>Este projeto foi o meu primeiro site desenvolvido, nele aprendi a introdução ao HTML e CSS de uma forma bem completa</p>
             </details>
             <p>2025</p>
             <h2>Projeto Cordel</h2>
             <p>Projeto construído para treinar efeito parallax em imagens e a apresentação de conteúdo em diversos tamanhos de tela.</p>
             <details>
-                <summary style="cursor: pointer; color: blue;">Saiba mais...</summary>
-                <p style="margin-top: 10px;">Este projeto foi desenvolvido com foco maior no foco do aprendizado em CSS</p>
+                <summary>Saiba mais...</summary>
+                <p>Este projeto foi desenvolvido com foco maior no foco do aprendizado em CSS</p>
             </details>
             <p>2025</p>
             <h2>Projeto de Vídeos</h2>
             <p>Projeto construído para treinar a inserção de vídeos em nosso site, além da navegação entre páginas..</p>
             <details>
-                <summary style="cursor: pointer; color: blue;">Saiba mais...</summary>
+                <summary>Saiba mais...</summary>
                 <p>Este projeto foi desenvolvido com HTMl e CSS com utilização de iframes com limks pelo youtube</p>
             </details>
         </section>
