att 3 css e html

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <header>
         <nav>
             <ul>
-                <li><a><i class='fas fa-home'></i></a></li>
+                <li><a href="#introducao"><i class='fas fa-home'></i></a></li>
 
-                <li><a><i class='fas fa-brain'></i></a></li>
+                <li><a href="#skills"><i class='fas fa-brain'></i></a></li>
 
-                <li><a><i class='fas fa-graduation-cap'></i></a></li>
+                <li><a href="#formacao"><i class='fas fa-graduation-cap'></i></a></li>
 
-                <li><a><i class='fas fa-pencil-ruler'></i></a></li>
+                <li><a href="#projetos"><i class='fas fa-pencil-ruler'></i></a></li>
 
                 <li><a><i class='fas fa-moon'></i></a></li>
             </ul>
@@ -29,11 +29,11 @@
             <img style="width: 150px;" src="imagens/guanabara-perfil.jpg" alt="Minha foto">
             <h1>Miquéias Meireles</h1>
             <p>Atualmente Trabalhando no Hospital Geral Dr. Beda como aprendiz de T.I. Pratico e desenvolvo projetos nas horas vagas pois é uma área pela qual me despertou muito interesse! Poder criar, estilizar e até deixar tudo mais dinâmico com centerteza é algo que te dá a sensação de recompensa após os neurônios queimados ao programa-lás 😂</p>
-            <button><i class='fab fa-linkedin-in'></i></button>
-            <button><i class='fab fa-github-square'></i><button>
-            <button><i class='fab fa-youtube'></i><button>
-            <button><i class='fab fa-instagram'></i><button>
-            <button><i class='fas fa-tv'></i><button>
+            <a><i class='fab fa-linkedin-in'></i></a>
+            <a href="https://github.com/MiqueiasMeireles" target="_blank"><i class='fab fa-github-square'></i><a>
+            <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank"><i class='fab fa-youtube'></i><a>
+            <a><i class='fab fa-instagram'></i><a>
+            <a><i class='fas fa-tv'></i><a>
         </section>
         <section id="apresentacao">
             <h1><i class='far fa-comments'></i> Apresentação</h1>
@@ -41,14 +41,46 @@
         </section>
         <section id="skills">
             <h1><i class='fas fa-brain'></i> Minhas skills</h1>
+
             <h2><i class='fas fa-code'></i> Python</h2>
+            <div class="progress">
+                <div class="progress-bar" style="width: 80%;">80%</div>
+            </div>
+            
             <h2><i class='fas fa-code'></i> HTML5</h2>
+            <div class="progress">
+                <div class="progress-bar" style="width: 90%;">90%</div>
+            </div>
+
             <h2><i class='fas fa-code'></i> CSS3</h2>
+            <div class="progress">
+                <div class="progress-bar" style="width: 90%;">90%</div>
+            </div>
+
             <h2><i class='fas fa-code'></i> JavaScript</h2>
+            <div class="progress">
+                <div class="progress-bar" style="width: 50%;">50%</div>
+            </div>
             <h2><i class='fas fa-users'></i> Comunicação</h2>
+            <div class="progress">
+                <div class="progress-bar" style="width: 90%;">90%</div>
+            </div>
+
             <h2><i class='fas fa-users'></i> Trabalho em equipe</h2>
+            <div class="progress">
+                <div class="progress-bar" style="width: 80%;">80%</div>
+            </div>
+
             <h2><i class='fas fa-users'></i> Adaptabilidade</h2>
+            <div class="progress">
+                <div class="progress-bar" style="width: 100%;">100%</div>
+            </div>
+
             <h2><i class='fas fa-users'></i> Liderença</h2>
+            <div class="progress">
+                <div class="progress-bar" style="width: 70%;">70%</div>
+            </div>
+
         </section>
         <section id="formacao">
             <h1><i class='fas fa-graduation-cap'></i> Formação</h1>
